day9/pvcpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: my-pvc-pod
  name: my-pvc-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      run: my-pvc-pod
  template:
    metadata:
      labels:
        run: my-pvc-pod
    spec:
      containers:
      - image: busybox
        name: my-pvc-pod
        command: ["/bin/sh","-c","while true; do sleep 3600; done"] 
        volumeMounts:
        - name: my-storage
          mountPath: "/mnt/storage"
      volumes:
      - name: my-storage
        persistentVolumeClaim: 
          claimName: my-pvc
