day9/volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volumepod
spec:
  containers:
  - image: busybox
    name: test-container
    command: ["/bin/sh","-c","while true; do sleep 3600; done"]
    volumeMounts:
    - mountPath: /tmp/storage
      name: test-volume
  volumes:
  - name: test-volume
    emptyDir: {}
